updated files, fixed spacing, etc

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ body {
   background-color: white;
 }
 
-.portfolio-box-col1 {
+/* .portfolio-box-col1 {
   display: flex;
   flex-direction: column;
   align-items: left;
@@ -120,7 +120,7 @@ body {
   align-items: flex-end;
   margin-top: -702px;
   margin-right: 80px;
-}
+} */
 
 img {
   padding-top: 30px;
@@ -131,9 +131,9 @@ img {
   color: gray;
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   float: right;
-  width: 95%;
+  width: 90%;
   line-height: 2;
-  padding-top: 10px;
+  padding-top: 20px;
 }
 
 section {
@@ -276,8 +276,9 @@ input[type=submit]:hover {
 /* Create two columns that float next to eachother */
 .column {
     float: left;
-    width: 88%;
-    margin-top: 6px;
+    width: 90%;
+    margin-top: -10px;
+    margin-left: 30px;
     padding: 20px;
 }
 
